@@ -1,6 +1,7 @@
 2024-12-07 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Verify compatibility with PHP 8.4
+    * Verify service availability when a service is requested
 
 2024-11-26 Francois Suter (Idéative)  <typo3@ideative.ch>
 
